# resilient-rs

./: README.md
code-examples/src/asynchronous/: mod.rs
code-examples/src/synchronous/: mod.rs
resilient-rs/: Cargo.toml
resilient-rs/src/: lib.rs
resilient-rs/src/asynchronous/: mod.rs
resilient-rs/src/config/: mod.rs
resilient-rs/src/strategies/: mod.rs
resilient-rs/src/synchronous/: mod.rs
