[package]
name = "resilient-rs"
version = "0.4.7"
edition = "2024"

description = "A Rust utility library for fault tolerance, including retry strategies, backoff mechanisms, and failure handling."
license = "MIT"
repository = "https://github.com/semicolon-10/resilient-rs.git"
homepage = "https://github.com/semicolon-10/resilient-rs.git"
documentation = "https://docs.rs/resilient-rs"
readme = "../README.md"
keywords = ["retry", "fault-tolerance", "backoff", "resilience", "rust"]
categories = ["concurrency", "asynchronous", "rust-patterns"]
authors = ["semicolon702@gmail.com"]
exclude = [".github", ".gitignore"]

[dependencies]
log = "0.4.26"
async-std = "1.13.0"

[dev-dependencies]
